--- a/classes.css
+++ b/classes.css
@@ -21,11 +21,11 @@
   background-image: url('images/spiral.png');
   background-repeat: repeat-y;
   min-width: 25rem; /* Don't let the content get too narrow */
-  max-width: 60rem; /*  Don't let the content get too wide */
+  max-width: 70rem; /*  Don't let the content get too wide */
   padding: 0;
   margin-top: 1rem;
   margin-bottom: 1rem;
-  margin-right: 1rem;
+  margin-right: 1.0rem;
   box-shadow: 8px 8px 10px 4px var(--shadow);
 }
 .headerclass {
@@ -50,12 +50,19 @@
   padding: 2rem 2rem 2rem 1rem;
 }
 .sectionclass {
+  clear: both;
   padding: 1rem 0 1rem 0;
+}
+.headingclass {
+  background: var(--page);
+  color: var(--heading);
+  font: var(--header-font);
+  margin-top: 2rem;
 }
 .subheadingclass {
   color: var(--heading);
   font: var(--subheading-font);
-  padding-top: 0.5rem;
+  padding-top: 1.5rem;
   padding-bottom: 0.5rem;
 }
 .text-right {
@@ -65,30 +72,128 @@
 }
 .photol-right { /* landscape 4x3 image to the right */
   float: right;
-  width: 16rem;
-  margin: 1rem 0 1rem 1rem;
+  width: 50%;
+  height: auto;
+  /*width: 24rem;*/
+  /*height: 18rem;*/
+  margin: 0 0 1rem 1rem;
+  box-shadow: 8px 8px 10px 4px var(--shadow); /* right and bottom shadow, blur, spread and colour */
+}
+.photol-left { /* landscape 4x3 image to the left */
+  float: left;
+  width: 50%;
+  height: auto;
+  margin: 1rem 1rem 1rem 0;
   box-shadow: 8px 8px 10px 4px var(--shadow); /* right and bottom shadow, blur, spread and colour */
 }
 .photol-right-shadowless { /* landscape 4x3 image to the right */
   float: right;
-  width: 24rem;
+  width: 35%;
   margin: 0 0 1rem 1rem;
 }
-.photol-left { /* landscape 4x3 image to the left */
+.photol-leftg { /* landscape 4x3 image to the left */
   float: left;
-  width: 16rem;
+  width: 100%;
+  height: auto;
   margin: 1rem 1rem 1rem 0;
   box-shadow: 8px 8px 10px 4px var(--shadow); /* right and bottom shadow, blur, spread and colour */
 }
 .photop-right { /* portrait 3x4 image to the right */
   float: right;
-  width: 18rem;
+  width: 35%;
+  height: auto;
+  margin: 0 0 1rem 1rem;
   box-shadow: 8px 8px 10px 4px var(--shadow); /* right and bottom shadow, blur, spread and colour */
 }
 .photop-left { /* portrait 3x4 image to the left */
   float: left;
-  width: 18rem;
+  width: 35%;
+  height: auto;
+  margin: 1rem 1rem 1rem 0;
   box-shadow: 8px 8px 10px 4px var(--shadow); /* right and bottom shadow, blur, spread and colour */
+}
+.photop-leftg { /* portrait 3x4 image to the left */
+  float: left;
+  width: 75%;
+  height: auto;
+  margin: 1rem 1rem 1rem 0;
+  box-shadow: 8px 8px 10px 4px var(--shadow); /* right and bottom shadow, blur, spread and colour */
+}
+.image-left {
+  float:left;
+  width: 12rem;
+  margin: 1rem 1rem 1rem 0;
+}
+.image-right {
+  float:right;
+  width: 20rem;
+  margin: 1rem 0 1rem 1rem;
+  box-shadow: 8px 8px 10px 4px var(--shadow); /* right and bottom shadow, blur, spread and colour */
+}
+.image-right-s {
+  float:right;
+  width: 15rem;
+  margin: 1rem 0 1rem 1rem;
+  box-shadow: 8px 8px 10px 4px var(--shadow); /* right and bottom shadow, blur, spread and colour */
+}
+.image-left-nm {
+  float:left;
+  width: 12rem;
+  margin: 0 1rem 0 0;
+}
+.image-left-nms {
+  float:left;
+  width: 10rem;
+  margin: 0 1rem 0 0;
+}
+.grid-container {
+  display: grid;
+  clear: both;
+  column-gap: 1rem;
+  grid-template-columns: auto auto;
+}
+.item11 {
+  grid-column: 1;
+  grid-row: 1;
+}
+.item12 {
+  grid-column: 2;
+  grid-row: 1;
+}
+.item22 {
+  grid-column: 2;
+  grid-row: 2;
+}
+.item31 {
+  grid-column: 1;
+  grid-row: 3;
+}
+.item32 {
+  grid-column: 2;
+  grid-row: 3;
+}
+.item41 {
+  grid-column: 1;
+  grid-row: 4;
+}
+.item42 {
+  grid-column: 2;
+  grid-row: 4;
+}
+.item51 {
+  grid-column: 1;
+  grid-row: 5;
+}
+.item52 {
+  grid-column: 2;
+  grid-row: 5;
+}
+
+.list {
+  margin-left: 2rem;
+}
+p {
+  margin-bottom: 0.5rem;
 }
 .clear {
   clear: both;
