--- a/variables.css
+++ b/variables.css
@@ -7,11 +7,11 @@
   --heading: maroon; /* used for all headings */
   --shadow: grey; /* used for all shadows */
   /* fonts */
-  --header-font:3rem "Comic Sans MS", sans-serif;
-  --main-font:1rem "Comic Sans MS", sans-serif;
-  --footer-font:0.75rem "Comic Sans MS", sans-serif;
-  --title-font:2rem "Comic Sans MS", sans-serif;
-  --subheading-font: normal bold 1.5rem "Comic Sans MS", sans-serif;
+  --header-font:1.5rem "Comic Sans MS", "Bradley Hand", sans-serif;
+  --main-font:1rem "Comic Sans MS", "Bradley Hand", sans-serif;
+  --footer-font:0.75rem "Comic Sans MS", "Bradley Hand", sans-serif;
+  --title-font:2rem "Comic Sans MS", "Bradley Hand", sans-serif;
+  --subheading-font: normal bold 1.5rem "Comic Sans MS", "Bradley Hand", sans-serif;
   /*  */
   --indent: 73px;
 }
